k8s/00-namespace-and-secret.yaml
# 00-namespace-and-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aira-prod
